Added reflection logic to fetch max course IDs size from application.yml Added add-opens to allow reflection Added Jackson dependency to read application.yml. Chose Jackson over SnakeYAML for easier parsing of kebab-case config